# eulerengine

./: CMakeLists.txt  euler.py
shaders/: compile.bat
src/apps/game/: CMakeLists.txt  main.cpp
src/apps/sandbox/: CMakeLists.txt  main.cpp
src/apps/shadows/: CMakeLists.txt  main.cpp
src/apps/skeletalAnimation/: CMakeLists.txt  main.cpp
src/core/: API.h  App.cpp  App.h  CMakeLists.txt
src/core/graphics/: AmbientLight .cpp  AmbientLight.h  AnimatedMesh.cpp  AnimatedMesh.h  AnimatedModel.cpp  AnimatedModel.h  AnimatedModelPipeline.cpp  AnimatedModelPipeline.h  AnimatedShadows.cpp  AnimatedShadows.h  AnimatedVertex.cpp  AnimatedVertex.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  BufferGroup.cpp  BufferGroup.h  Camera.cpp  Camera.h  Common.h  DescriptorSetGroup.cpp  DescriptorSetGroup.h  DirectionalLight.cpp  DirectionalLight.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshMaterial.cpp  MeshMaterial.h  Model.cpp  Model.h  ModelPipeline.cpp  ModelPipeline.h  ModelRenderer.cpp  ModelRenderer.h  Renderer.cpp  Renderer.h  RendererInfo.cpp  (+7 more)
src/core/graphics/vulkan/: Vulkan.cpp  Vulkan.h
src/core/input/: GLFWInputHandler.cpp
src/core/io/: Utils.cpp  Utils.h
src/core/math/: Mat4.h  Math.cpp  Math.h  Matrices.cpp  Matrices.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vec2.h  Vec3.h  Vec4.h
src/core/resources/: AnimatedModelResource.cpp  AnimatedModelResource.h  ModelResource.cpp  ModelResource.h  Resources.cpp  Resources.h  TextureResource.cpp  TextureResource.h
src/core/util/: CameraController.cpp  CameraController.h
src/core/vulkan/: Device.cpp  Device.h  Instance.cpp  Instance.h
src/sandbox/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  MathTests.cpp  main.cpp
src/tools/eulermodel/: CMakeLists.txt  main.cpp
